# smorch

./: .env.example  .flake8  .gitignore  PROJECT_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/versions/: 957d3cd81797_create_statuses_table.py
plans/: create-statuses-table.md  main-page-architecture.md  user-page-architecture.md
src/: __init__.py  app.py  config.py  database.py
src/models/: __init__.py  base.py  log.py  timer.py
src/routes/: __init__.py  dashboard.py  user.py
src/static/css/: style.css
src/static/js/: dashboard.js  profile.js
src/templates/: base.html  dashboard.html  profile.html
tests/: conftest.py  test_dashboard.py  test_health.py  test_user.py
